<resources>
    <string name="app_name">Crime Reporting</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="terms">Terms and conditions</string>
    <string name="open_drawer">Open</string>
    <string name="close_drawer">Close</string>
    <string name="feeling_unsafe">Feeling Unsafe</string>
    <string name="emergency">Emergency</string>
    <string name="compose_message">Compose Message</string>
    <string name="provide_feedback">Provide Feedback</string>
    <string name="court_finder">Court Finder</string>
    <string name="my_cases">My Cases</string>
    <string name="report_fraud_and_corruption">Report Fraud and Corruption</string>
    <string name="report_crime">Report Crime</string>
    <string name="single_row">Single row</string>
    <string name="welcome">Welcome Jimmy Mapunya</string>
    <string name="email">jimmymapunya@ijs.gov.za</string>
    <string name="inbox">Inbox</string>
    <string name="notifications">Notifications</string>
    <string name="title_activity_provide_feedback">ProvideFeedback</string>
    <string name="title_activity_court_finder">Court Finder</string>
    <string name="str_caseNo">Case No: 25/2017/95</string>
    <string name="str_offense">Adam Mkhabele accused of attempted murder</string>
    <string name="str_courtDate">26 May 2017</string>
    <string name="str_arrest">Arrest</string>
    <string name="str_investigate">Investigate</string>
    <string name="str_trial">Trial</string>
    <string name="str_bail">Bail hearing</string>
    <string name="str_vedict">Verdict</string>
    <string name="str_aquit">Aquit</string>
    <string name="str_sentencing">Sentencing</string>
    <string name="str_search">Search</string>
    <string name="str_image">Image</string>
    <string name="str_overall_feedback">Overall Feedback</string>
    <string name="str_event_feedback">Event Feedback</string>
    <string name="str_Individual_feedback">Individual Feedback</string>
    <string name="title_activity_maps">Map</string>
    <string name="strSubmitFeedback">Submit Feedback</string>
    <string name="strNotNow">Not Now</string>
    <string name="before_crime">What happened before the crime took place?</string>
    <string name="during_crime">What happened during the crime ?</string>
    <string name="after_crime">What happened after the crime took place ?</string>
    <string name="injuries">Were there any injuries to anyone?</string>
    <string name="describe_injuries">Describe those injuries</string>
    <string name="objects_used">Were there any objects used?(e.g condoms, ropes, firearms)</string>
    <string name="crime_scene_items">Were there any items removed from the crime scene ?</string>
    <string name="describe_crimescene_items">Describe those items</string>
    <string name="crime_surroundings">Describe the surroundings where the incident took place.</string>
    <string name="know_offender">Do you know the offender?</string>
    <string name="first_account">Did you tell anyone about this incident?</string>
    <string name="add_offender_details">Add offender details</string>
    <string name="possible_witnesses">Are there any possible witness(es)?</string>
    <string name="add_witness_details">Add witness details</string>
    <string name="full_names_hint">Full Names</string>
    <string name="contact_number_hint">Contact Number</string>
    <string name="tattoos">Describe tattoos if applicable</string>
    <string name="describe_physical_appearance">Describe physical appearance</string>
    <string name="facial_identikit">Will be able to identify the suspect(s) and/or compile a facial identikit?</string>
    <string name="address">Address</string>
    <string name="witness_name_example">Kocokoco Mabunda</string>
    <string name="witness_contact_example">0733119856</string>
    <string name="witness_address_example">44 Condere Estate</string>
    <string name="describe_those_objects">Describe those objects</string>
    <string name="please_confirm_that_all_details_provided_are_correct_and_accurate">Please confirm that all details provided are correct and accurate</string>
    <string name="submit">Submit</string>
    <string name="please_specify_which_crime_you_would_like_to_report">Please specify which crime you would like to report.</string>
    <string name="full_name">Full Name</string>
    <string name="email_hint">Email address</string>
    <string name="_011_258_5233">011 258 5233</string>
    <string name="please_confirm_your_details_before_proceeding">Please confirm your details before proceeding.</string>
    <string name="user_maribolle_rakolota">User: Maribolle Rakolota</string>
    <string name="mariboller_ijs_gov_za">mariboller@ijs.gov.za</string>

    <string-array name="injuries_choice">
        <item>Select</item>
        <item>Yes</item>
        <item>No</item>
    </string-array>

    <string-array name="crimes">
        <item>Possession or Use of Drugs</item>
        <item>Theft</item>
        <item>Aggravated Assault</item>
        <item>Common Assault</item>
        <item>Driving under the influence</item>
        <item>House breaking to commit unknown crime</item>
        <item>Malicious Injury to Property</item>
        <item>Consuming liquor in public</item>
        <item>Possession of suspected stolen goods</item>
        <item>Aggravated Robbery</item>
        <item>Dealing in Drugs</item>
        <item>Driving MV without license</item>
        <item>Rape</item>
        <item>Murder</item>
        <item>Drunk in public</item>
        <item>House breaking to steal</item>
        <item>Possession of weapon</item>
        <item>Common Robbery</item>
        <item>Failure to wear safety belt.</item>
        <item>Contravening the conditions of a Protection Order</item>
        <item>Reckless or Negligent driving</item>
    </string-array>

    <string-array name="gender">
        <item>Select sex</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="racial_group">
        <item>Select race</item>
        <item>Black</item>
        <item>Coloured</item>
        <item>Asian</item>
        <item>White</item>
    </string-array>

    <string-array name="age_group">
        <item>Select age</item>
        <item>1 - 8</item>
        <item>9 - 17</item>
        <item>18 - 35 </item>
        <item>36 and above</item>
    </string-array>
</resources>
