<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_profile"
        android:orderInCategory="100"
        android:title="@string/profile"
        app:showAsAction="collapseActionView"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/settings"
        app:showAsAction="collapseActionView"/>
    <item
        android:id="@+id/action_terms"
        android:orderInCategory="100"
        android:title="@string/terms"
        app:showAsAction="collapseActionView"/>
    <item
        android:id="@+id/notifications"
        android:orderInCategory="200"
        android:title="@string/notifications"
        android:icon="@mipmap/ic_notification"
        app:showAsAction="never"/>

    <item
        android:id="@+id/inbox"
        android:orderInCategory="200"
        android:title="@string/inbox"
        android:icon="@mipmap/ic_inbox"
        app:showAsAction="never"/>



</menu>