<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@android:color/darker_gray"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <TextView
        android:id="@+id/lblWitnessName"
        android:layout_width="0dp"
        android:layout_weight="100"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/witness_name_example" />
    <TextView
        android:id="@+id/lblWitnessContact"
        android:layout_width="0dp"
        android:layout_weight="100"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/witness_contact_example" />
    <TextView
        android:id="@+id/lblWitnessAddress"
        android:layout_width="0dp"
        android:layout_weight="100"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/witness_address_example" />
</LinearLayout>