<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/appBar"
        layout="@layout/app_bar" />

    <android.support.v4.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:overScrollMode="ifContentScrolls"
                android:scrollbarStyle="insideOverlay"
                android:scrollbars="vertical">

                <Button
                    android:id="@+id/btnReportcrime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="5dp"
                    android:drawableStart="@mipmap/ic_book"
                    android:drawableEnd="@mipmap/ic_arrow"
                    android:text="@string/report_crime" />

                <Button
                    android:id="@+id/btnFraud"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/btnReportcrime"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:drawableStart="@mipmap/ic_bug"
                    android:drawableEnd="@mipmap/ic_arrow"
                    android:text="@string/report_fraud_and_corruption" />

                <Button
                    android:id="@+id/btnMycases"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/btnFraud"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:drawableStart="@mipmap/ic_court"
                    android:drawableEnd="@drawable/one"
                    android:text="@string/my_cases" />

                <Button
                    android:id="@+id/btnCourtfinder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/btnMycases"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:drawableStart="@mipmap/ic_location"
                    android:drawableEnd="@mipmap/ic_arrow"
                    android:text="@string/court_finder" />

                <Button
                    android:id="@+id/btnCompose"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/btnCourtfinder"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:drawableEnd="@mipmap/ic_arrow"
                    android:drawableStart="@mipmap/ic_compose"
                    android:text="@string/compose_message" />

                <Button
                    android:id="@+id/btnFeedback"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/btnCompose"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:drawableStart="@mipmap/ic_feedback"
                    android:drawableEnd="@mipmap/ic_arrow"
                    android:text="@string/provide_feedback" />

                <Button
                    android:id="@+id/btnEmergency"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/btnFeedback"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/emergencybutton"
                    android:text="@string/emergency"
                    android:textColor="#fff" />

                <Button
                    android:id="@+id/btnFeelsafe"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/btnEmergency"
                    android:layout_marginBottom="15dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/emergencybutton"
                    android:text="@string/feeling_unsafe"
                    android:textColor="#fff" />


            </RelativeLayout>
        </ScrollView>

        <fragment
            android:id="@+id/frag_nav_drawer"
            android:name="mobilecrimereportingapp.za.ijs.gov.crimereportingapp.view.NavigationDrawerFrag"
            android:layout_width="@dimen/nav_drawer_width"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            app:layout="@layout/fragment_navigation_drawer" />

    </android.support.v4.widget.DrawerLayout>

</LinearLayout>