<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/editWitnessDetails"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/txtWitnessName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:layout_weight="50"
                android:background="@drawable/edit_text_style"
                android:gravity="top|start"
                android:hint="@string/full_names_hint"
                android:textColorHint="#B0BEC5" />

            <EditText
                android:id="@+id/txtWitnessContact"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:layout_weight="50"
                android:background="@drawable/edit_text_style"
                android:gravity="top|start"
                android:hint="@string/contact_number_hint"
                android:inputType="number"
                android:textColorHint="#B0BEC5" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/txtWitnessAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_style"
                android:gravity="top|start"
                android:hint="@string/address"
                android:textColorHint="@android:color/darker_gray" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:background="@android:color/darker_gray" />
        </LinearLayout>

        <Button
            android:id="@+id/btnAddWitnessInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/unsafebutton"
            android:drawableStart="@mipmap/ic_add"
            android:text="@string/add_witness_details"
            android:textColor="#fff" />

    </LinearLayout>

</LinearLayout>