<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/txtOffenderrrName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:layout_weight="50"
            android:background="@drawable/edit_text_style"
            android:gravity="top|start"
            android:hint="@string/full_names_hint"
            android:textColorHint="#B0BEC5" />

        <EditText
            android:id="@+id/txtOffenderContact"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:layout_weight="50"
            android:background="@drawable/edit_text_style"
            android:gravity="top|start"
            android:hint="@string/contact_number_hint"
            android:inputType="number"
            android:textColorHint="#B0BEC5" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/txtOffenderAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_style"
            android:gravity="top|start"
            android:hint="@string/address"
            android:textColorHint="@android:color/darker_gray" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:background="@android:color/darker_gray" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/spinnerRacialGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="50"
            android:background="@drawable/bg_spinner_style" />

        <Spinner
            android:id="@+id/spinnerGender"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="50"
            android:background="@drawable/bg_spinner_style" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Spinner
            android:id="@+id/spinnerAgeGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:layout_weight="100"
            android:background="@drawable/bg_spinner_style" />

        <EditText
            android:id="@+id/txtTattoos"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_style"
            android:gravity="top|start"
            android:hint="@string/tattoos"
            android:inputType="textMultiLine"
            android:lines="3"
            android:maxLines="10"
            android:minLines="3"
            android:scrollbars="vertical"
            android:textColorHint="#B0BEC5" />

        <EditText
            android:id="@+id/txtAppearance"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_style"
            android:gravity="top|start"
            android:hint="@string/describe_physical_appearance"
            android:inputType="textMultiLine"
            android:lines="3"
            android:maxLines="10"
            android:minLines="3"
            android:scrollbars="vertical"
            android:textColorHint="#B0BEC5" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/facial_identikit" />

        <Spinner
            android:id="@+id/spinnerFacialIdentikit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:layout_weight="100"
            android:background="@drawable/bg_spinner_style" />

    </LinearLayout>

</LinearLayout>